Completed: Polished up implementation of data storage and currencies api
