# internal/structs/currencies.go
@@ -3,12 +3,12 @@ package structs
 import "time"
 
 type RateAtDateBody struct {
-	Timestamp time.Time `json:"timestamp" binding:"required"`
-	Currency  string    `json:"currency" binding:"required"`
+	Timestamp time.Time `form:"timestamp" binding:"required"`
+	Currency  string    `form:"currency" binding:"required"`
 }
 
 type RatesInPeriodBody struct {
-	Start      time.Time `json:"start" binding:"required"`
-	End        time.Time `json:"end" binding:"required"`
-	Currencies []string  `json:"currencies" binding:"required"`
+	Start      time.Time `form:"start" binding:"required"`
+	End        time.Time `form:"end" binding:"required"`
+	Currencies []string  `form:"currencies" binding:"required"`
 }
